theme.css - Fixed an issue causing event calendar items to have an extra line break on desktop sizes. EventItemList-v3.lava - Fixed an issue causing Starting Point & Baptism to render multiple times per month.

--- a/RockWeb/Themes/church_ccv_External_v8/Styles/theme.css
+++ b/RockWeb/Themes/church_ccv_External_v8/Styles/theme.css
@@ -10813,7 +10813,7 @@ html,body{
    }
    
    .event-page-wrapper .event-calendar .event-item .details .info h4 {
-      max-width: none;
+      max-width: 300px;
    }
 }
 /* ---- Overrides for desktop size ---- */
